# concierge

./: .env.example  .gitignore  README.md  pyproject.toml
concierge/: acknowledger.py  burst.py  classifier.py  config.py  inbox.py  main.py  models.py  reconciler.py  spacecadet_client.py  status.py  websocket_handler.py
concierge/llm/: anthropic_provider.py  base.py  ollama_provider.py  openai_provider.py
static/: app.js  index.html  style.css  tasks.html  tasks.js
tests/: conftest.py  test_burst.py  test_classifier.py  test_inbox.py  test_reconciler.py
