[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "concierge"
version = "0.1.0"
description = "iMessage-style front desk for AI task management via spacecadet MCP"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "websockets>=13.0",
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    "mcp>=1.0.0,<2.0.0",
    "anthropic>=0.40.0",
    "httpx>=0.27.0",
]

[project.optional-dependencies]
dev = ["pytest>=7.0", "pytest-asyncio>=0.23.0"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
